# kanji-converter

./: .gitignore  README.md  main.py  pyproject.toml
sentences/: tokenize_sents.py
util/: jpUtil.py  kanji.py
